--- a/MetaLogic/FOL.Language.html
+++ b/MetaLogic/FOL.Language.html
@@ -29,35 +29,34 @@
 <h1 id="一阶逻辑-语言">一阶逻辑: 语言</h1>
 <blockquote>
 <p>交流Q群: 893531731<br />
-本文源码: <a href="">Github - FOL.Language.lagda.md</a><br />
-高亮渲染: <a href="">GitHub Pages - FOL.Language.html</a></p>
+<a href="https://github.com/choukh/MetaLogic/blob/main/src/FOL/Language.lagda.md">GitHub</a> | <a href="https://choukh.github.io/MetaLogic/FOL.Language.html">GitHub Pages</a> | <a href="https://www.yuque.com/ocau/metalogic/fol.language">语雀</a></p>
 </blockquote>
-<pre class="Agda"><a id="134" class="Keyword">module</a> <a id="141" href="FOL.Language.html" class="Module">FOL.Language</a> <a id="154" class="Keyword">where</a>
+<pre class="Agda"><a id="282" class="Keyword">module</a> <a id="289" href="FOL.Language.html" class="Module">FOL.Language</a> <a id="302" class="Keyword">where</a>
 
-<a id="161" class="Keyword">open</a> <a id="166" class="Keyword">import</a> <a id="173" href="Foundation.Essential.html" class="Module">Foundation.Essential</a>
+<a id="309" class="Keyword">open</a> <a id="314" class="Keyword">import</a> <a id="321" href="Foundation.Essential.html" class="Module">Foundation.Essential</a>
 
-<a id="195" class="Keyword">record</a> <a id="Language"></a><a id="202" href="FOL.Language.html#202" class="Record">Language</a> <a id="211" class="Symbol">:</a> <a id="213" href="Agda.Primitive.html#388" class="Primitive">𝕋₁</a> <a id="216" class="Keyword">where</a>
-  <a id="224" class="Keyword">field</a>
-    <a id="Language.𝓕"></a><a id="234" href="FOL.Language.html#234" class="Field">𝓕</a> <a id="236" class="Symbol">:</a> <a id="238" href="Agda.Primitive.html#388" class="Primitive">𝕋</a>
-    <a id="Language.𝓡"></a><a id="244" href="FOL.Language.html#244" class="Field">𝓡</a> <a id="246" class="Symbol">:</a> <a id="248" href="Agda.Primitive.html#388" class="Primitive">𝕋</a>
-    <a id="Language.∣_∣ᶠ"></a><a id="254" href="FOL.Language.html#254" class="Field Operator">∣_∣ᶠ</a> <a id="259" class="Symbol">:</a> <a id="261" href="FOL.Language.html#234" class="Field">𝓕</a> <a id="263" class="Symbol">→</a> <a id="265" href="Agda.Builtin.Nat.html#203" class="Datatype">ℕ</a>
-    <a id="Language.∣_∣ᴿ"></a><a id="271" href="FOL.Language.html#271" class="Field Operator">∣_∣ᴿ</a> <a id="276" class="Symbol">:</a> <a id="278" href="FOL.Language.html#244" class="Field">𝓡</a> <a id="280" class="Symbol">→</a> <a id="282" href="Agda.Builtin.Nat.html#203" class="Datatype">ℕ</a>
-    <a id="Language.discr𝓕"></a><a id="288" href="FOL.Language.html#288" class="Field">discr𝓕</a> <a id="295" class="Symbol">:</a> <a id="297" href="Relation.Binary.Definitions.html#6468" class="Function">discrete</a> <a id="306" href="FOL.Language.html#234" class="Field">𝓕</a>
-    <a id="Language.discr𝓡"></a><a id="312" href="FOL.Language.html#312" class="Field">discr𝓡</a> <a id="319" class="Symbol">:</a> <a id="321" href="Relation.Binary.Definitions.html#6468" class="Function">discrete</a> <a id="330" href="FOL.Language.html#244" class="Field">𝓡</a>
-    <a id="Language.enum𝓕"></a><a id="336" href="FOL.Language.html#336" class="Field">enum𝓕</a> <a id="342" class="Symbol">:</a> <a id="344" href="Foundation.Relation.Unary.Enumerable.html#2456" class="Function">enumerable</a> <a id="355" href="FOL.Language.html#234" class="Field">𝓕</a>
-    <a id="Language.enum𝓡"></a><a id="361" href="FOL.Language.html#361" class="Field">enum𝓡</a> <a id="367" class="Symbol">:</a> <a id="369" href="Foundation.Relation.Unary.Enumerable.html#2456" class="Function">enumerable</a> <a id="380" href="FOL.Language.html#244" class="Field">𝓡</a>
+<a id="343" class="Keyword">record</a> <a id="Language"></a><a id="350" href="FOL.Language.html#350" class="Record">Language</a> <a id="359" class="Symbol">:</a> <a id="361" href="Agda.Primitive.html#388" class="Primitive">𝕋₁</a> <a id="364" class="Keyword">where</a>
+  <a id="372" class="Keyword">field</a>
+    <a id="Language.𝓕"></a><a id="382" href="FOL.Language.html#382" class="Field">𝓕</a> <a id="384" class="Symbol">:</a> <a id="386" href="Agda.Primitive.html#388" class="Primitive">𝕋</a>
+    <a id="Language.𝓡"></a><a id="392" href="FOL.Language.html#392" class="Field">𝓡</a> <a id="394" class="Symbol">:</a> <a id="396" href="Agda.Primitive.html#388" class="Primitive">𝕋</a>
+    <a id="Language.∣_∣ᶠ"></a><a id="402" href="FOL.Language.html#402" class="Field Operator">∣_∣ᶠ</a> <a id="407" class="Symbol">:</a> <a id="409" href="FOL.Language.html#382" class="Field">𝓕</a> <a id="411" class="Symbol">→</a> <a id="413" href="Agda.Builtin.Nat.html#203" class="Datatype">ℕ</a>
+    <a id="Language.∣_∣ᴿ"></a><a id="419" href="FOL.Language.html#419" class="Field Operator">∣_∣ᴿ</a> <a id="424" class="Symbol">:</a> <a id="426" href="FOL.Language.html#392" class="Field">𝓡</a> <a id="428" class="Symbol">→</a> <a id="430" href="Agda.Builtin.Nat.html#203" class="Datatype">ℕ</a>
+    <a id="Language.discr𝓕"></a><a id="436" href="FOL.Language.html#436" class="Field">discr𝓕</a> <a id="443" class="Symbol">:</a> <a id="445" href="Relation.Binary.Definitions.html#6468" class="Function">discrete</a> <a id="454" href="FOL.Language.html#382" class="Field">𝓕</a>
+    <a id="Language.discr𝓡"></a><a id="460" href="FOL.Language.html#460" class="Field">discr𝓡</a> <a id="467" class="Symbol">:</a> <a id="469" href="Relation.Binary.Definitions.html#6468" class="Function">discrete</a> <a id="478" href="FOL.Language.html#392" class="Field">𝓡</a>
+    <a id="Language.enum𝓕"></a><a id="484" href="FOL.Language.html#484" class="Field">enum𝓕</a> <a id="490" class="Symbol">:</a> <a id="492" href="Foundation.Relation.Unary.Enumerable.html#2456" class="Function">enumerable</a> <a id="503" href="FOL.Language.html#382" class="Field">𝓕</a>
+    <a id="Language.enum𝓡"></a><a id="509" href="FOL.Language.html#509" class="Field">enum𝓡</a> <a id="515" class="Symbol">:</a> <a id="517" href="Foundation.Relation.Unary.Enumerable.html#2456" class="Function">enumerable</a> <a id="528" href="FOL.Language.html#392" class="Field">𝓡</a>
 
-  <a id="Language.count𝓕"></a><a id="385" href="FOL.Language.html#385" class="Function">count𝓕</a> <a id="392" class="Symbol">:</a> <a id="394" href="Foundation.Relation.Unary.Countable.html#158" class="Function">countable</a> <a id="404" href="FOL.Language.html#234" class="Field">𝓕</a>
-  <a id="408" href="FOL.Language.html#385" class="Function">count𝓕</a> <a id="415" class="Symbol">=</a> <a id="417" href="Foundation.Relation.Unary.Enumerable.html#9022" class="Function">discr→enum→count</a> <a id="434" href="FOL.Language.html#288" class="Field">discr𝓕</a> <a id="441" href="FOL.Language.html#336" class="Field">enum𝓕</a>
+  <a id="Language.count𝓕"></a><a id="533" href="FOL.Language.html#533" class="Function">count𝓕</a> <a id="540" class="Symbol">:</a> <a id="542" href="Foundation.Relation.Unary.Countable.html#158" class="Function">countable</a> <a id="552" href="FOL.Language.html#382" class="Field">𝓕</a>
+  <a id="556" href="FOL.Language.html#533" class="Function">count𝓕</a> <a id="563" class="Symbol">=</a> <a id="565" href="Foundation.Relation.Unary.Enumerable.html#9022" class="Function">discr→enum→count</a> <a id="582" href="FOL.Language.html#436" class="Field">discr𝓕</a> <a id="589" href="FOL.Language.html#484" class="Field">enum𝓕</a>
 
-  <a id="Language.count𝓡"></a><a id="450" href="FOL.Language.html#450" class="Function">count𝓡</a> <a id="457" class="Symbol">:</a> <a id="459" href="Foundation.Relation.Unary.Countable.html#158" class="Function">countable</a> <a id="469" href="FOL.Language.html#244" class="Field">𝓡</a>
-  <a id="473" href="FOL.Language.html#450" class="Function">count𝓡</a> <a id="480" class="Symbol">=</a> <a id="482" href="Foundation.Relation.Unary.Enumerable.html#9022" class="Function">discr→enum→count</a> <a id="499" href="FOL.Language.html#312" class="Field">discr𝓡</a> <a id="506" href="FOL.Language.html#361" class="Field">enum𝓡</a>
+  <a id="Language.count𝓡"></a><a id="598" href="FOL.Language.html#598" class="Function">count𝓡</a> <a id="605" class="Symbol">:</a> <a id="607" href="Foundation.Relation.Unary.Countable.html#158" class="Function">countable</a> <a id="617" href="FOL.Language.html#392" class="Field">𝓡</a>
+  <a id="621" href="FOL.Language.html#598" class="Function">count𝓡</a> <a id="628" class="Symbol">=</a> <a id="630" href="Foundation.Relation.Unary.Enumerable.html#9022" class="Function">discr→enum→count</a> <a id="647" href="FOL.Language.html#460" class="Field">discr𝓡</a> <a id="654" href="FOL.Language.html#509" class="Field">enum𝓡</a>
 
-  <a id="Language.isSet𝓕"></a><a id="515" href="FOL.Language.html#515" class="Function">isSet𝓕</a> <a id="522" class="Symbol">:</a> <a id="524" href="Foundation.Prelude.HLevel.html#889" class="Function">isSet</a> <a id="530" href="FOL.Language.html#234" class="Field">𝓕</a>
-  <a id="534" href="FOL.Language.html#515" class="Function">isSet𝓕</a> <a id="541" class="Symbol">=</a> <a id="543" href="Foundation.Relation.Nullary.Discrete.html#547" class="Function">discrete→isSet</a> <a id="558" href="FOL.Language.html#288" class="Field">discr𝓕</a>
+  <a id="Language.isSet𝓕"></a><a id="663" href="FOL.Language.html#663" class="Function">isSet𝓕</a> <a id="670" class="Symbol">:</a> <a id="672" href="Foundation.Prelude.HLevel.html#889" class="Function">isSet</a> <a id="678" href="FOL.Language.html#382" class="Field">𝓕</a>
+  <a id="682" href="FOL.Language.html#663" class="Function">isSet𝓕</a> <a id="689" class="Symbol">=</a> <a id="691" href="Foundation.Relation.Nullary.Discrete.html#547" class="Function">discrete→isSet</a> <a id="706" href="FOL.Language.html#436" class="Field">discr𝓕</a>
 
-  <a id="Language.isSet𝓡"></a><a id="568" href="FOL.Language.html#568" class="Function">isSet𝓡</a> <a id="575" class="Symbol">:</a> <a id="577" href="Foundation.Prelude.HLevel.html#889" class="Function">isSet</a> <a id="583" href="FOL.Language.html#244" class="Field">𝓡</a>
-  <a id="587" href="FOL.Language.html#568" class="Function">isSet𝓡</a> <a id="594" class="Symbol">=</a> <a id="596" href="Foundation.Relation.Nullary.Discrete.html#547" class="Function">discrete→isSet</a> <a id="611" href="FOL.Language.html#312" class="Field">discr𝓡</a>
+  <a id="Language.isSet𝓡"></a><a id="716" href="FOL.Language.html#716" class="Function">isSet𝓡</a> <a id="723" class="Symbol">:</a> <a id="725" href="Foundation.Prelude.HLevel.html#889" class="Function">isSet</a> <a id="731" href="FOL.Language.html#392" class="Field">𝓡</a>
+  <a id="735" href="FOL.Language.html#716" class="Function">isSet𝓡</a> <a id="742" class="Symbol">=</a> <a id="744" href="Foundation.Relation.Nullary.Discrete.html#547" class="Function">discrete→isSet</a> <a id="759" href="FOL.Language.html#460" class="Field">discr𝓡</a>
 </pre>
 </main>
 
